# shoot-out-your-life

./: .gitignore  Cargo.toml  README.md
src/: assets.rs  bullet.rs  enemy.rs  main.rs  particle.rs  scenes.rs
src/scenes/: game.rs  manager.rs  title.rs
