[package]
name = "shoot_out_your_life"
version = "0.1.1"
build = "build.rs"
authors = ["puppetmaster <github@puppetmaster.ch>"]
edition = "2018"
license = "MIT"
readme = "README.md"

[dependencies]
tetra = "0.2.16"
lazy_static = "1.3.0"

# random
rand = "0.6"
rand_core = "0.2.2"

# logging
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
simple_logger = "1.0"

# error
color-backtrace = { version = "0.1" }

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true
